--- a/css/starter.css
+++ b/css/starter.css
@@ -7,10 +7,11 @@ body{
   header{
     background: #fff;
     border-bottom: 3px solid #50C7C7;
-    margin-bottom:20px
+    margin-bottom:20px;
+    text-align: center;
   }
   
-  h1{
+ h1{
     font-size: 2em;
     text-align: center;
     line-height: 2;
@@ -20,6 +21,14 @@ body{
     font-size: 1.5em;
     text-align: center;
     padding: 5px;
+  } 
+
+  h3{
+    text-align: center;
+  }
+  
+  h4{
+    text-align: center;
   }
   
   p {
@@ -61,6 +70,7 @@ body{
 
   .pricing{
     min-height: 475px;
+    text-align: center;
   }
 
   .card {
@@ -68,18 +78,20 @@ body{
     background: #fff;
     border-radius: 7px;
     padding: 0 0 25px 0;
+    text-align: center;
   
   }
 
   .card > ul{
     list-style: none;
     padding-left: 5px;
+    text-align: center;
   }
   
   .card > ul li {
     width: 90%;
     margin: 20px auto;
-    
+    text-align: center;
   }
 
 .card button{
