--- a/css/style.css
+++ b/css/style.css
@@ -99,9 +99,29 @@ a:link, a:visited {
     display: flex;
     flex-flow: row wrap;
     justify-content: space-between;
+    align-items: center;
+    text-align: center;
+    /* position: sticky;
+    top: 0;
+    z-index: 1000;
+    background-color: white;  */
   }
 
-  .nav links {
+   /* Step 13:Fixed header at the top of the screen */
+  body > header {
+    position: fixed;
+    top: 0;
+    width: 100%;
+    z-index: 10;
+    background-color: #f1f1f1;
+    overflow: visible;
+  }
+
+  h1 {
+    overflow: visible;
+  }
+
+  .nav_links {
     display: flex;
     flex-direction: row;
     justify-content: flex-end;
@@ -111,26 +131,22 @@ a:link, a:visited {
   /* Step 12 */
   .card {
     flex-basis: 275px;
-    border: 2px solid #45ADDD;
+    /* border: 2px solid #45ADDD;
     padding: 20px;
-    border-radius: 10px;
+    border-radius: 10px; */
   }
 
   .pricing {
-    align-items: center;
     display: flex;
     justify-content: center;
     flex-wrap: wrap;
   }
 
-  /* Step 13:Fixed header at the top of the screen */
-  header:first-of-type {
-    position: fixed;
-    top: 0;
-    width: 100%;
-    z-index: 10;
-    background-color: #f1f1f1;
+  .card > ul{
+    list-style: none;
+    padding-left: 5px;
   }
+
 }
 
 /* Step 14: Reduced motion preferences */
